# typing-test

./: IDEAS.md  LICENSE  README.md  TODO.md
backend/: '  .env.example  .gitignore  Cargo.toml  quotes.json
backend/src/: auth.rs  common.rs  database.rs  experimental.rs  main.rs  preferences.rs  results.rs  state.rs  tests.rs  typing_race.rs  typing_test.rs  utils.rs
backend/src/auth/: current_user.rs  log_out.rs  sign_in.rs  sign_up.rs
backend/src/common/: error.rs  state.rs
backend/src/typing_race/: room.rs
backend/src/typing_test/: quote.rs  words_or_time.rs
database/: drop.sql  replace.sql  schema.sql  sql-formatter.json
database/procedures/: insert_result.sql
docs/: authorisation.md  ghosts.md  guests.md  preferences.md  races.md  results.md  sharing.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.js  App.tsx  Footer.css  Footer.js  Footer.tsx  Header.css  Header.js  Header.tsx  Notifications.css  Notifications.tsx  index.css  index.js  languages.js  main.tsx  notifications.js  preferences.js  userDetails.js  vite-env.d.ts
mui-frontend/: .babelrc  README.md  package.json  tsconfig.json
mui-frontend/public/: index.html
mui-frontend/src/: App.js  App.tsx  Header.css  Notifications.js  Notifications.tsx  index.css  index.js  index.tsx  languages.js
react-tui/: 2  package.json
react-tui/src/: App.tsx  Diff.tsx  Footer.tsx  (+2 more)
tui/: package.json  tsconfig.json  webpack.config.js
tui-frontend/: README.md  package.json  tsconfig.json  webpack.config.js
vite-frontend/: package.json
(+223 files in other folders)
