[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["macros", "ws"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
http = "0.2.9"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
lettre = { version = "0.11.2", features = ["tokio1", "pool", "tokio1-native-tls"] }
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.4.0"
sha2 = "0.10.7"
sqlx = { version = "0.8.1", features = ["mysql", "runtime-tokio", "json", "chrono"] }
thiserror = "1.0.52"
tokio = { version = "1.32.0", features = ["macros", "full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
